--- a/css/index.css
+++ b/css/index.css
@@ -855,6 +855,148 @@
 }
 /* --------------- /logo --------------- */
 
+/* --------------- bread-crumbs --------------- */
+.bread-crumbs{
+    margin-bottom: 14px;
+    color: #707070;
+}
+.bread-crumbs__item{
+    display: inline-block;
+    position: relative;
+    margin-right: 3px;
+    padding-right: 18px;
+    color: inherit;
+    font-weight: 600;
+    text-decoration: underline;
+}
+.bread-crumbs__item:after{
+    position: absolute;
+    top: -1px;
+    right: 0;
+    font-family: 'Open Sans', sans-serif;
+    content: '→';
+}
+.bread-crumbs__item:last-child{
+    text-decoration: none;
+}
+.bread-crumbs__item:last-child:after{
+    display: none;
+}
+/* --------------- /bread-crumbs --------------- */
+
+/* --------------- mn_content --------------- */
+.mn_content{
+    margin-bottom: 100px;
+    color: #707070;
+    font-size: 14px;
+    line-height: 18px;
+}
+.mn_content a{
+    color: #0090ff;
+    text-decoration: underline;
+}
+.mn_content a:hover{
+    text-decoration: none;
+}
+.mn_content p{
+    margin-bottom: 18px;
+}
+.mn_content p span{
+    color: #e24200;
+    font-weight: 700;
+}
+.mn_content p b{
+    color: #000;
+}
+.mn_content .span2{
+    color: #0090ff;
+}
+.mn_content h1{
+    margin-bottom: 17px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #707070;
+    font-size: 18px;
+    line-height: 30px;
+    letter-spacing: .5px;
+    text-transform: uppercase;
+}
+.mn_content h2{
+    margin-bottom: 13px;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 400;
+}
+.mn_content h3{
+    margin-bottom: 7px;
+    font-size: 15px;
+    color: #0090ff;
+}
+.mn_content h4{
+    margin-bottom: 7px;
+}
+.mn_content ul{
+    margin-bottom: 22px;
+    line-height: 30px;
+}
+.mn_content ul li{
+    position: relative;
+    padding-left: 21px;
+}
+.mn_content ul li:before{
+    position: absolute;
+    top: 10px;
+    left: 0;
+    width: 16px;
+    height: 11px;
+    background: url(../img/icons-list.jpg) no-repeat 0 0;
+    content: '';
+}
+.mn_content ol{
+    margin-bottom: 22px;
+    padding-top: 12px;
+    counter-reset: list 0;
+}
+.mn_content ol li{
+    position: relative;
+    margin-bottom: 18px;
+    padding-left: 23px;
+}
+.mn_content ol li:before{
+    counter-increment: list;
+    content: counter(list);
+    position: absolute;
+    left: 0;
+}
+.mn_content__table{
+    margin: 15px 0 35px;
+    border: 1px solid #c1c1c1;
+    border-radius: 5px;
+    overflow: hidden;
+}
+.mn_content table{
+    width: 100%;
+}
+.mn_content thead{
+    background-color: #0090ff;
+    color: #fff;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.mn_content td,
+.mn_content th{
+    height: 37px;
+    vertical-align: middle;
+    padding: 0 14px;
+}
+.mn_content tbody th{
+    background-color: #d3d3d3;
+    color: #fff;
+}
+.mn_content tbody td{
+    border-top: 1px solid #c1c1c1;
+}
+/* --------------- /mn_content --------------- */
+
 @media (min-width: 768px){
 
     .site__content-layout{
